pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: ui-pod
  labels:
    app: ui
spec:
  containers:
    - name: ui-nginx-container
      image: nginx
