clusterIP-service-definition .yml
apiVersion: v1
kind: Service

metadata:
  name: back-end


spec:
  type: CLusterIP    #### it is also a default type
  ports:
    - targetPort: 80
      port: 80

  selector:
    app: myapp
    type: back-end


# kubectl create -f clusterIP-service-definition.yml

# kubectl get services
