nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    component: nginx
  ports:
    - port: 3000
      targetPort: 80
