service-definition.yml
apiVersion: apps/v1
kind: Service
metadata:
 name: myapp-service

spec:
 type: NodePort
 ports:
	- targetPort: 80
	  port: 80
	  nodeport: 30008
 
 selector:
	  app: myapp
	  type: front-end

# kubectl create -f service-definition.yml

# kubectl get services

# curl http://192.168.43.1:30008/

# kubectl get pods
